--- a/design.css
+++ b/design.css
@@ -2,18 +2,95 @@
     box-sizing: border-box;
 }
 
+
 body {
-    background-image:url(https://media.istockphoto.com/photos/close-up-real-estate-agent-with-house-model-hand-putting-signing-a-picture-id1130833057?k=6&m=1130833057&s=612x612&w=0&h=-UMcbugrsTpQbIzq0_pUfolbx2OwBl_TI24JjeeUkF8=
-    );
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image:url("https://wallpaperplay.com/walls/full/6/b/f/79654.jpg#.Xkim93pXR6A.link");
     color: white;
+    background: cover;
+    background-repeat: no-repeat;
+}
+
+
+.container {
+    width: 300px;
+    height: 350px;
+    /* border: 1px black solid; */
+    margin: 0 auto;
+    background-color: white;
+    color: black;
+    margin-top: 45px;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 20px;
 }
 
 .header-container {
     text-align: center;
 }
 
+
+fieldset {
+    width: 300px;
+    height: 350px;
+    border: none;
+    margin: 0 auto;
+    background-color: white;
+    color: black;
+    margin-top: 45px;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 20px;
+}
+
+
+.js-start-btn {
+    background: green;
+    color: white;
+    border: 0;
+    font-size: 20px;
+    margin-top: 50px;
+}
+
+#next {
+    color: white;
+    background-color: grey;
+}
+
+#answer {
+    color: white;
+    background-color: grey;
+}
+
+#restart {
+    color: white;
+    background-color: grey;
+}
+
+
+.questionContainer {
+    padding-bottom: 30px;
+}
+
+.optionContainer {
+    padding: 10px;
+}
+
+.finalScore {
+    text-align: center;
+}
+
+.scoreboard li {
+    display: inline-block;
+    font-size: 18px;
+}
+
+.scoreboard ul {
+    text-align: center;
+    padding-right: 50px;
+}
+
+
+@media only screen and (min-width: 768px){
 
 .container {
     width: 600px;
@@ -100,54 +177,4 @@ fieldset {
 .js-score {
     padding: 0 4%;
 }
-
-
-@media only screen and (max-width: 425px){
-    .container {
-        width: 100px;
-        height: 100px;
-        margin: 0 auto;
-        background-color: white;
-        color: black;
-        margin-top: 45px;
-        font-size: 14px;
-    }
-
-    .larger-container {
-        border: 1px solid;
-        width: 250px;
-        height: 250px;
-        margin: 0 auto;
-        background-color: white;
-        margin-top: 40px;
-    }
-
-    .js-start-btn {
-        background: green;
-        color: white;
-        border: 0;
-        font-size: 12px;
-        margin-right: 30px;
-        margin-top: 0px;
-    }
-
-    .js-form {
-        width: 300px;
-        height: 300px;
-        margin: 0 auto;
-        background-color: white;
-        margin-top: 120px;
-        color: black;
-        border: none;
-    }
-
-    .scoreboard ul {
-        text-align: center;
-        padding-right: 12px;
-    }
-
-    .scoreboard li {
-        display: inline-block;
-        font-size: 12px;
-    }
-};
+}
