--- a/design.css
+++ b/design.css
@@ -8,6 +8,7 @@ body {
     color: white;
     background: cover;
     background-repeat: no-repeat;
+    background-color: rgb(77, 136, 255);
 }
 
 
